--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <button>Saiba mais</button>
                 </div>
                 <div class="image-container">
-                    <img src="../img/estudante.jpg" alt="image">
+                    <img src="../img/estudante.png" alt="image">
                 </div>
             </div>
         </section>
