modificações de espaçamento e tamamho de imagem

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section>
             <div class="section-container">
                 <div class="section-container-content">
-                    <p class="paragraph-main">Tecnologia pra deixar você contente</p>
+                    <p class="paragraph-main">TECNOLOGIA PRA DEIXAR VOCÊ CONTENTE</p>
                     <p class="paragraph-secundary">Criamos aplicativos e serviços para te ajudar a alcançar bons resultado 
                         no seu negócio
                     </p>
