--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <ul>
                         <li>Aplicativos</li>
                         <li>Serviços</li>
-                        <li>Contatos</li>
+                        <li>Contato</li>
                     </ul>
                 </nav>
             </div>
@@ -32,7 +32,7 @@
                     <button>Saiba mais</button>
                 </div>
                 <div class="image-container">
-                    <img src="../img/estudante.png" alt="image">
+                    <img src="img/estudante.png" alt="image">
                 </div>
             </div>
         </section>
