fix: refatoring the code

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
 
         <header>
-            <div class="header-container">
-                <p class="logo">Lynxys Tecnologia</p>
+            <div class="header-in">
+                <h2>Lynxys Tecnologia</h2>
                 <nav>
                     <ul>
                         <li>Aplicativos</li>
@@ -22,20 +22,22 @@
             </div>
         </header>
 
-        <section>
-            <div class="section-container">
-                <div class="section-container-content">
-                    <p class="paragraph-main">TECNOLOGIA PRA DEIXAR VOCÊ CONTENTE</p>
-                    <p class="paragraph-secundary">Criamos aplicativos e serviços para te ajudar a alcançar bons resultado 
-                        no seu negócio
-                    </p>
-                    <button>Saiba mais</button>
-                </div>
-                <div class="image-container">
-                    <img src="img/estudante.png" alt="image">
-                </div>
+        <div class="banner">
+          <div class="banner-in">
+            <div class="left-side">
+                <h1>TECNOLOGIA PRA DEIXAR VOCÊ CONTENTE<h1>
+                <p class="paragraph-secundary">Criamos aplicativos e serviços para te ajudar a alcançar bons resultado 
+                    no seu negócio
+                </p>
+                <button>Saiba mais</button>
             </div>
-        </section>
+            <div class="right-side">
+              <div class="image-container">
+                  <img src="img/image_1.jpg" alt="Foto de uma mulher sorrindo e um notebook aberto na sua frente">
+              </div>
+            </div>
+          </div>
+        </div>
 
     </body>
 </html>
