fix: concluindo refatoração do layout

--- a/index.html
+++ b/index.html
@@ -10,30 +10,28 @@
     <body>
 
         <header>
-            <div class="header-in">
-                <h2>Lynxys Tecnologia</h2>
-                <nav>
-                    <ul>
-                        <li>Aplicativos</li>
-                        <li>Serviços</li>
-                        <li>Contato</li>
-                    </ul>
-                </nav>
-            </div>
+          <div class="header-in">
+            <h2>Lynxys Tecnologia</h2>
+            <nav>
+              <ul>
+                <li>Aplicativos</li>
+                <li>Serviços</li>
+                <li>Contato</li>
+              </ul>
+            </nav>
+          </div>
         </header>
 
         <div class="banner">
           <div class="banner-in">
             <div class="left-side">
-                <h1>TECNOLOGIA PRA DEIXAR VOCÊ CONTENTE<h1>
-                <p class="paragraph-secundary">Criamos aplicativos e serviços para te ajudar a alcançar bons resultado 
-                    no seu negócio
-                </p>
-                <button>Saiba mais</button>
+              <h2>TECNOLOGIA PRA DEIXAR VOCÊ CONTENTE</h2>
+              <p>Criamos aplicativos e serviços para te ajudar a alcançar bons resultado no seu&nbsp;negócio</p>
+              <button>Saiba mais</button>
             </div>
             <div class="right-side">
               <div class="image-container">
-                  <img src="img/image_1.jpg" alt="Foto de uma mulher sorrindo e um notebook aberto na sua frente">
+                <img src="img/image_1.jpg" alt="Foto de uma mulher sorrindo e um notebook aberto na sua frente">
               </div>
             </div>
           </div>
