Alteração de layout

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Os melhores apps de gestão</title>
+        <title>Lynxys | Tecnologia que te deixa contente</title>
         <link rel="stylesheet" href="css/index.css" />
     </head>
     <body>
@@ -16,6 +16,7 @@
               <ul>
                 <li>Aplicativos</li>
                 <li>Serviços</li>
+                <li>Blog</li>
                 <li>Contato</li>
               </ul>
             </nav>
@@ -25,9 +26,9 @@
         <div class="banner">
           <div class="banner-in">
             <div class="left-side">
-              <h2>TECNOLOGIA PRA DEIXAR VOCÊ CONTENTE</h2>
-              <p>Criamos aplicativos e serviços para te ajudar a alcançar bons resultado no seu&nbsp;negócio</p>
-              <button>Saiba mais</button>
+              <h2>TECNOLOGIA QUE TE DEIXA CONTENTE</h2>
+              <p>Aplicativos e serviços. Tudo feito com carinho, qualidade e segurança para atender você</p>
+              <button>Experimente</button>
             </div>
             <div class="right-side">
               <div class="image-container">
