Ajustando responsividade e bloqueando opção de zoom

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
         <title>Lynxys | Tecnologia que te deixa contente</title>
         <link rel="stylesheet" href="css/index.css" />
+        <link rel="stylesheet" href="css/index.min.css" />
     </head>
     <body>
 
         <header>
           <div class="header-in">
             <h2>Lynxys Tecnologia</h2>
-            <nav>
+            <nav id="menu">
               <ul>
                 <li>Aplicativos</li>
                 <li>Serviços</li>
