--- a/index.html
+++ b/index.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-        <title>Lynxys | Tecnologia que te deixa contente</title>
-        <link rel="stylesheet" href="css/index.css" />
-        <link rel="stylesheet" href="css/index.min.css" />
-    </head>
-    <body>
+  <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2" />
+      <meta name="description" content="Página de apresentação da empresa Lynxys Tecnologia" />
+      <title>Lynxys | Tecnologia que te deixa contente</title>
+      <style type="text/css">
+        .banner-in,.header-in{width:1000px;max-width:1000px;display:flex}.banner,.banner-in,.header-in,.left-side,header{display:flex}.left-side>button,body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif}header,img{width:100%}:root{--primary-color:#0d5eff;--secondary-color:#0d5eff}*{padding:0;margin:0;box-sizing:border-box}header{justify-content:center;align-items:center}.header-in{justify-content:space-between;align-items:center;height:80px}.header-in>nav>ul{list-style:none;display:flex}.header-in>nav>ul>li{margin:15px;cursor:pointer}.banner{justify-content:center;align-items:center}.banner-in{padding:50px 0 20px;justify-content:space-between}.left-side{flex-direction:column;justify-content:center}.left-side>h2{width:250px}.left-side>p{width:300px;margin:20px 0 50px}.left-side>button{padding:10px;background-color:var(--primary-color);color:#fff;border:none;border-radius:5px;width:110px;cursor:pointer;transition:.3s;font-size:12pt}.image-container{width:548px;height:370px;border:5px solid #000}img{height:100%}
+      </style>
+      <link rel="preload" href="css/index.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+      <noscript><link rel="stylesheet" type="text/css" href="css/index.min.css"></noscript>
+      <link rel="shortcut icon" href="img/icone.webp" type="image/x-icon" />
+  </head>
+  <body>
 
-        <header>
-          <div class="header-in">
-            <h2>Lynxys Tecnologia</h2>
-            <nav id="menu">
-              <ul>
-                <li>Aplicativos</li>
-                <li>Serviços</li>
-                <li>Blog</li>
-                <li>Contato</li>
-              </ul>
-            </nav>
-          </div>
-        </header>
+    <header>
+      <div class="header-in">
+        <h2>Lynxys Tecnologia</h2>
+        <nav id="menu">
+          <ul>
+            <li>Aplicativos</li>
+            <li>Serviços</li>
+            <li>Blog</li>
+            <li>Contato</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-        <div class="banner">
-          <div class="banner-in">
-            <div class="left-side">
-              <h2>TECNOLOGIA QUE TE DEIXA CONTENTE</h2>
-              <p>Aplicativos e serviços. Tudo feito com carinho, qualidade e segurança para atender você</p>
-              <button>Experimente</button>
-            </div>
-            <div class="right-side">
-              <div class="image-container">
-                <img src="img/image_1.jpg" alt="Foto de uma mulher sorrindo e um notebook aberto na sua frente">
-              </div>
-            </div>
+    <div class="banner">
+      <div class="banner-in">
+        <div class="left-side">
+          <h2>TECNOLOGIA QUE TE DEIXA CONTENTE</h2>
+          <p>Aplicativos e serviços. Tudo feito com carinho, qualidade e segurança para atender você</p>
+          <button>Experimente</button>
+        </div>
+        <div class="right-side">
+          <div class="image-container">
+            <img src="img/image_1.webp" alt="Foto de uma mulher sorrindo e um notebook aberto na sua frente">
           </div>
         </div>
+      </div>
+    </div>
 
-    </body>
+  </body>
 </html>
